objects/Project_Task__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <description>Number of Days From Submit to Opps</description>
        <formula>if (  Text(Status__c) == 'Completed',  DATEVALUE(Completed_Date_Time_Stamp__c)- DATEVALUE( CreatedDate ),  TODAY() -  DATEVALUE( CreatedDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Days From Submit to Opps</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complete By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date_Time_Stamp__c</fullName>
        <description>This field is used to inform External Forecasting Reports. Do not change this field without first consulting Brodie Gay or Aditya Bhandari.</description>
        <label>Completed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to inform External Forecasting Reports. Do not change this field without first consulting Brodie Gay or Aditya Bhandari.</description>
        <label>Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Since_Documents_Sent__c</fullName>
        <formula>TODAY () - DATEVALUE(Completed_Date_Time_Stamp__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Documents Sent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Document_Upload_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Upload Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name_Text__c</fullName>
        <description>Used for PS notification email alerts</description>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Final Approval</fullName>
                </value>
                <value>
                    <fullName>Investment Due Diligence</fullName>
                </value>
                <value>
                    <fullName>Post Closing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to inform External Forecasting Reports. Do not change this field without first consulting Brodie Gay or Aditya Bhandari.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Project_Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prevent_Rollback_from_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To prevent if task is in status completed, not moved back to any other status</description>
        <label>Prevent Rollback from Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requirement_Picklist__c</fullName>
        <label>Requirement Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1040</fullName>
                </value>
                <value>
                    <fullName>1099</fullName>
                </value>
                <value>
                    <fullName>Add Applicant to Title at Closing</fullName>
                </value>
                <value>
                    <fullName>Additional Assets Verification Required</fullName>
                </value>
                <value>
                    <fullName>Additional lien information</fullName>
                    <label>Additional Lien Information</label>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Application Required for All Parties on Title</fullName>
                </value>
                <value>
                    <fullName>Appraisal - 1004D</fullName>
                </value>
                <value>
                    <fullName>Appraisal</fullName>
                    <label>Appraisal - 1st</label>
                </value>
                <value>
                    <fullName>Second Appraisal</fullName>
                    <label>Appraisal - 2nd</label>
                </value>
                <value>
                    <fullName>Appraisal - 3rd</fullName>
                </value>
                <value>
                    <fullName>Appraisal Desk Review</fullName>
                </value>
                <value>
                    <fullName>Authorization to Share</fullName>
                </value>
                <value>
                    <fullName>Bank Statement</fullName>
                </value>
                <value>
                    <fullName>Brokerage Statement</fullName>
                </value>
                <value>
                    <fullName>CAP Completed</fullName>
                </value>
                <value>
                    <fullName>Certificate of Occupancy</fullName>
                </value>
                <value>
                    <fullName>Certification of Trust</fullName>
                </value>
                <value>
                    <fullName>Certified Documents</fullName>
                </value>
                <value>
                    <fullName>Client must pay down mortgage</fullName>
                    <label>Client Must Pay Down Mortgage</label>
                </value>
                <value>
                    <fullName>Client must pay down mortgage - 2nd Lender</fullName>
                    <label>Client Must Pay Down Mortgage - 2nd Lender</label>
                </value>
                <value>
                    <fullName>Client must pay down mortgage - 3rd Lender</fullName>
                    <label>Client Must Pay Down Mortgage - 3rd Lender</label>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Closing Document</fullName>
                </value>
                <value>
                    <fullName>Closing documents executed as trustee and individual</fullName>
                    <label>Closing Documents Executed As Trustee and Individual</label>
                </value>
                <value>
                    <fullName>Condo rider executed</fullName>
                    <label>Condo Rider Executed</label>
                </value>
                <value>
                    <fullName>Confirm Vesting Type Change</fullName>
                </value>
                <value>
                    <fullName>Credit Report</fullName>
                </value>
                <value>
                    <fullName>Credit Supplement</fullName>
                </value>
                <value>
                    <fullName>Custom MAD Cap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requirement_Status__c</fullName>
        <formula>TEXT(Requirement__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requirement Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <label>Requirement</label>
        <referenceTo>Current_Conditions__c</referenceTo>
        <relationshipLabel>Project_Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field is used to inform External Forecasting Reports. Do not change this field without first consulting Brodie Gay or Aditya Bhandari.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Specialist__c</fullName>
        <description>Used for PS notification email alerts</description>
        <formula>Opportunity__r.UnisonProcessor__r.FirstName&amp;" "&amp; Opportunity__r.UnisonProcessor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waived_Changed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Waived Changed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Tasks2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Waived_Timestamp__c</fullName>
        <label>Waived Changed On</label>
        <type>DateTime</type>
    </fields>
    <label>Project Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Requirement__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Tasks</label>
    </listViews>
    <nameField>
        <label>Project Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>